--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -39,4 +39,4 @@ jobs:
           run: |
             nosetests -v --with-spec --spec-color --with-coverage --cover-package=service
           env:
-            DATABASE_URI: "postgresql://postgres:{password}@{service}:{port}/{database}"
+            DATABASE_URI: "postgresql://postgres:pgs3cr3t@postgres:5432/testdb"
