fixed indentation in pipeline.yaml and nose task in tasks.yaml

--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -57,10 +57,10 @@ spec:
           workspace: pipeline-workspace
       taskRef:
         name: nose
-        params:
-          - name: database_uri
-            value: sqlite:///test.db
-          - name: args
-            value: -v --with-spec --spec-color
+      params:
+        - name: database_uri
+          value: "sqlite:///test.db"
+        - name: args
+          value: "-v --with-spec --spec-color"
       runAfter:
         - clone
