--- a/tekton/tasks.yaml
+++ b/tekton/tasks.yaml
@@ -68,7 +68,7 @@ spec:
       type: string
       default: sqlite:///test.db
   steps:
-    - name: nosetests
+    - name: nose
       image: python:3.9-slim
       workingDir: $(workspaces.source.path)
       env:
